--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -87,6 +87,7 @@
       <section id="home"  >
         <div class="home-wrapper">
           <!-- Hero Image -->
+          <div class="hero-wrapper"> 
           <div class="hero-img">
             <img
               src="./src/assets/icon/project_pillar__1.png"
@@ -95,41 +96,42 @@
               width="100%"
             />
           </div>
-          
+        </div>
           <!-- Count Down to Event  -->
-          <!-- <div class="counter-wrapper">
-            <h2><span>Sucessfully concluded</span></h2> -->
-            <!-- <div class="container">
-              <div class="container-segment"> -->
+          <div class="counter-wrapper">
+            <h2  >Commemoration <span data-counter-title>Starts In</span></h2>
+            <!-- <h2  >Commemoration <span data-counter-title>Successfully Completed</span></h2> -->
+            <div class="container">
+              <div class="container-segment">
             <!-- Days Card -->
-            <!-- <div class="segment">
+            <div class="segment">
                   <div class="flip-card" data-days-tens>
-                    <div class="top">3</div>
-                    <div class="bottom">3</div>
+                    <div class="top">0</div>
+                    <div class="bottom">0</div>
                   </div>
                   <div class="flip-card" data-days-ones>
                     <div class="top">0</div>
                     <div class="bottom">0</div>
                   </div>
-                </div> -->
-            <!-- <div class="segment-title">Days</div>
-              </div> -->
+                </div>
+            <div class="segment-title">Days</div>
+              </div>
             <!-- Hours Card -->
-            <!-- <div class="container-segment">
+            <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-hours-tens>
-                    <div class="top">2</div>
-                    <div class="bottom">2</div>
+                    <div class="top">0</div>
+                    <div class="bottom">0</div>
                   </div>
                   <div class="flip-card" data-hours-ones>
-                    <div class="top">4</div>
-                    <div class="bottom">4</div>
+                    <div class="top">0</div>
+                    <div class="bottom">0</div>
                   </div>
                 </div>
                 <div class="segment-title">hours</div>
-              </div> -->
+              </div>
             <!-- Minutes Card -->
-            <!-- <div class="container-segment">
+            <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-minutes-tens>
                     <div class="top">0</div>
@@ -141,9 +143,9 @@
                   </div>
                 </div>
                 <div class="segment-title">minutes</div>
-              </div> -->
+              </div>
             <!-- Seconds Card -->
-            <!-- <div class="container-segment">
+            <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-seconds-tens>
                     <div class="top">0</div>
@@ -156,8 +158,8 @@
                 </div>
                 <div class="segment-title">seconds</div>
               </div>
-            </div> -->
-          <!-- </div> -->
+            </div>
+          </div>
 
           <!-- Scroll down Animation -->
         </div>
