--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -99,66 +99,8 @@
         </div>
           <!-- Count Down to Event  -->
           <div class="counter-wrapper">
-            <h2  >Commemoration <span data-counter-title>Starts In</span></h2>
-            <!-- <h2  >Commemoration <span data-counter-title>Successfully Completed</span></h2> -->
-            <div class="container">
-              <div class="container-segment">
-            <!-- Days Card -->
-            <div class="segment">
-                  <div class="flip-card" data-days-tens>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                  <div class="flip-card" data-days-ones>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                </div>
-            <div class="segment-title">Days</div>
-              </div>
-            <!-- Hours Card -->
-            <div class="container-segment">
-                <div class="segment">
-                  <div class="flip-card" data-hours-tens>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                  <div class="flip-card" data-hours-ones>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                </div>
-                <div class="segment-title">hours</div>
-              </div>
-            <!-- Minutes Card -->
-            <div class="container-segment">
-                <div class="segment">
-                  <div class="flip-card" data-minutes-tens>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                  <div class="flip-card" data-minutes-ones>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                </div>
-                <div class="segment-title">minutes</div>
-              </div>
-            <!-- Seconds Card -->
-            <div class="container-segment">
-                <div class="segment">
-                  <div class="flip-card" data-seconds-tens>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                  <div class="flip-card" data-seconds-ones>
-                    <div class="top">0</div>
-                    <div class="bottom">0</div>
-                  </div>
-                </div>
-                <div class="segment-title">seconds</div>
-              </div>
-            </div>
+            <h2  >Commemoration <span data-counter-title>Successfully Completed</span></h2>
+
           </div>
 
           <!-- Scroll down Animation -->
@@ -834,7 +776,7 @@
     </footer>
     <!-- Scripts -->
     <script src="./src/javascript/script.js"></script>
-    <script src="./src/javascript/countdown.js"></script>
+    <!-- <script src="./src/javascript/countdown.js"></script> -->
     <!-- <script src="./src/javascript/sponsor.js"></script> -->
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
