cleaned project pillar page

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -98,10 +98,10 @@
           </div>
         </div>
           <!-- Count Down to Event  -->
-          <div class="counter-wrapper">
+          <!-- <div class="counter-wrapper">
             <h2  >Commemoration <span data-counter-title>Successfully Completed</span></h2>
 
-          </div>
+          </div> -->
 
           <!-- Scroll down Animation -->
         </div>
