--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       type="image/svg+xml"
       href="./common/img/e_cell_logo_BLACK_WHITE_BG.webp"
     />
+    <link rel="preload" href="./src/assets/video/homevideo.mp4" as="video" type="video/mp4" />
+    <link rel="preload" href="./src/assets/video/Main_Page_Phone.mp4" as="video" type="video/mp4" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -513,7 +515,6 @@
         <h5>entrepreneurship and innovation cell | SAKEC</h5>
       </div>
     </footer>
-    <script src="./common/js/nav.js"></script>
     <script>
       const desktopUrl = "./src/assets/video/homevideo.mp4";
       const mobileUrl = "./src/assets/video/Main_Page_Phone.mp4";
@@ -532,6 +533,7 @@
         video.appendChild(source);
       });
     </script>
+    <script src="./common/js/nav.js"></script>
     <script src="./src/javascript/contactus.js"></script>
     <script src="/src/javascript/testim.js"></script>
   </body>
