footer change ecell head name

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
       type="image/svg+xml"
       href="./common/img/e_cell_logo_BLACK_WHITE_BG.webp"
     />
-    <link rel="preload" href="./src/assets/video/homevideo.mp4" as="video" type="video/mp4" />
-    <link rel="preload" href="./src/assets/video/Main_Page_Phone.mp4" as="video" type="video/mp4" />
+    <link
+      rel="preload"
+      href="./src/assets/video/homevideo.mp4"
+      as="video"
+      type="video/mp4"
+    />
+    <link
+      rel="preload"
+      href="./src/assets/video/Main_Page_Phone.mp4"
+      as="video"
+      type="video/mp4"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -444,14 +454,14 @@
           </div>
 
           <div class="contact-card">
-            <h4>Manav Khimani (Student Council Head)</h4>
+            <h4>Bhumika Thanvi</h4>
             <div class="contact-content">
               <div class="email-area">
                 <i class="bi bi-envelope-fill"></i>
                 <a
-                  href="mailto:manav.khimani@sakec.ac.in"
+                  href="mailto:bhumika.thanvi15931@sakec.ac.in"
                   style="color: #292f36"
-                  >manav.khimani@sakec.ac.in</a
+                  >bhumika.thanvi15931@sakec.ac.in</a
                 >
               </div>
               <!-- <div class="phone-area">
