--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -703,14 +703,14 @@
           </div>
 
           <div class="contact-card">
-            <h4>Manav Khimani (Student Council Head)</h4>
+            <h4>Bhumika Thanvi</h4>
             <div class="contact-content">
               <div class="email-area">
                 <i class="bi bi-envelope-fill"></i>
                 <a
-                  href="mailto:manav.khimani@sakec.ac.in"
+                  href="mailto:bhumika.thanvi15931@sakec.ac.in"
                   style="color: #292f36"
-                  >manav.khimani@sakec.ac.in</a
+                  >bhumika.thanvi15931@sakec.ac.in</a
                 >
               </div>
               <!-- <div class="phone-area">
