--- a/events/index.html
+++ b/events/index.html
@@ -50,7 +50,7 @@
         <li><a href="../index.html#home">Home </a></li>
         <li><a href="#">Events </a></li>
         <li><a href="../index.html#about">About Us </a></li>
-        <li><a href="../team/index.html">Our Team</a></li>
+        <!-- <li><a href="../team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
