--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <li><a href="#testimony">Testimony</a></li>
         <li><a href="#contactus">Contact Us </a></li>
-        <li><a href="./team/index.html">Our Team</a></li>
+        <!-- <li><a href="./team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
