--- a/podcast/index.html
+++ b/podcast/index.html
@@ -92,7 +92,7 @@
         <!-- <li> <a href="#objective">Newsletter</a> </li> -->
         <!-- <li> <a href="#testimony">Testimony</a> </li> -->
         <!-- <li> <a href="#contactus">Contact Us </a> </li> -->
-        <li><a href="../team/index.html">Our Team</a></li>
+        <!-- <li><a href="../team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
