--- a/faq/index.html
+++ b/faq/index.html
@@ -60,7 +60,7 @@
         <li><a href="../index.html#objective">Objectives</a></li>
         <li><a href="../index.html#testimony">Testimony</a></li>
         <li><a href="../index.html#contactus">Contact Us </a></li>
-        <li><a href="../team/index.html">Our Team</a></li>
+        <!-- <li><a href="../team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
