changed email in footer homepg

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div class="email-area">
               <i class="bi bi-envelope-fill"></i>
               <a href="mailto:info@ecellsakec.in" style="color: #292f36"
-                >info@ecellsakec.in</a
+                >ecell@sakec.ac.in</a
               >
             </div>
             <div class="phone-area">
