changed email in all footers ecell wala

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -724,8 +724,8 @@
             <h4>For Other Queries Contact Us At :</h4>
             <div class="email-area">
               <i class="bi bi-envelope-fill"></i>
-              <a href="mailto:info@ecellsakec.in" style="color: #292f36"
-                >info@ecellsakec.in</a
+              <a href="mailto:ecell@sakec.ac.in" style="color: #292f36"
+                >ecell@sakec.ac.in</a
               >
             </div>
             <div class="phone-area">
