--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <h4>For Other Queries Contact Us At :</h4>
             <div class="email-area">
               <i class="bi bi-envelope-fill"></i>
-              <a href="mailto:info@ecellsakec.in" style="color: #292f36"
+              <a href="mailto:ecell@sakec.ac.in" style="color: #292f36"
                 >ecell@sakec.ac.in</a
               >
             </div>
