--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> -->s
 
     <section class="hero-section">
+      <!-- Video -->
       <video
         autoplay
         muted
