--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-    </section> -->s
+    </section> -->
 
     <section class="hero-section">
       <!-- Video -->
