fixed gallery in parcel branch

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
 
         <li><a href="#testimony">Testimony</a></li>
         <li><a href="#contactus">Contact Us </a></li>
+        <li> <a id="nav-a" href="./faq/index.html">FAQ</a> </li>
         <!-- <li><a href="./team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
