--- a/src/projectpillar/faq/index.html
+++ b/src/projectpillar/faq/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
   <!-- page specific imports -->
-  <link rel="stylesheet" href="../src/css/style.scss">
+  <!-- <link rel="stylesheet" href="../src/css/style.scss"> -->
   <link rel="stylesheet" href="../../common/css/footer.scss">
   <link rel="stylesheet" href="../../common/css/nav.scss">
   <link rel="stylesheet" href="../../common/css/reset.scss">
