--- a/src/projectpillar/index.html
+++ b/src/projectpillar/index.html
@@ -436,7 +436,8 @@
         <h1 class="main-heading">Gallery</h1>
         <div class="gallery">
           <div class="gallery-item item-4x3">
-            <img class="thumb placeholder" src="./src/assets/pp-gallery-img/36.webp"  alt="">
+            <img class="thumb placeholder" src="./src/assets/pp-gallery-img/36.webp" data-src="./src/assets/pp-gallery-img/36.webp"
+            data-image="./src/assets/pp-gallery-img/36.webp"  alt="">
           </div>
           <div class="gallery-item item-3x4">
             <img class="thumb placeholder" src="./src/assets/pp-gallery-img/1.webp" data-src="./src/assets/pp-gallery-img/1.webp"
