mte contents added to this branch

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -75,7 +75,30 @@
         <h3>EVENTS</h3>
       </div>
     </div>
+    <section class="event2">
+      <div class="sharktank">
+        <div class="sharktank_img">
+          <img src="./img/pp300.png" alt="sharktank img" />
+        </div>
 
+        <div class="sharktank_info">
+          <h1 class="sharktank_title">Project Pillar</h1>
+          <p>
+            A platform for new-age startups with innovative ideas. Presenting an
+            opportunity for such startups to get a hold of potential investors
+            that help turn their ideas into viable ventures. Find a pillar that
+            supports your project to the heights you’ve always dreamed of!!
+          </p>
+
+          <a
+            href="../meet-the-entrepreneur/index.html"
+            class="sharktank_cta"
+            target="_blank"
+            >Read more</a
+          >
+        </div>
+      </div>
+    </section>
     <section class="event2">
       <div class="sharktank">
         <div class="sharktank_img">
