--- a/src/projectpillar/index.html
+++ b/src/projectpillar/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="../common/img/e_cell_logo_BLACK_WHITE_BG.webp"
     />
+    <link rel="preload" as="image" href="./src/assets/icon/project_pillar__1.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Pillar</title>
@@ -17,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./src/css/style.scss" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" />
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script  src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -300,137 +301,6 @@
           </div>
         </div>
       </section>
-
-      <!-- Timeline -->
-
-      <!-- <section id="timeline">
-        <h1 data-aos="fade-up">Timeline</h1>
-        <div class="timeline-wrapper" data-aos="fade-up" data-aos-delay="100">
-          <div class="center-line"></div>
-
-          <!-- Pre Registration -->
-<!-- 
-          <div class="row row-1">
-            <div class="icons icons-1">
-              <img
-                src="./src/assets/svg/home-2.svg"
-                alt=""
-                width="100%"
-                height="65%"
-              />
-            </div>
-            <section id="phase-1" data-aos-delay="70" data-aos-duration="800">
-              <div class="details">
-                <span class="title">Pre-Registration</span> -->
-                <!-- <span>
-                1st oct 2022
-              </span> -->
-              <!-- </div>
-              <p>
-                Each participant needs to fill out the provisional registration
-                form with primary details and essential documentation.
-              </p> -->
-              <!-- <div class="button">
-                <a
-                  href="https://form.ecellsakec.in/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="btn"
-                  >Register Now</a
-                >
-              </div> -->
-            <!-- </section>
-          </div> -->
-
-          <!-- Verification -->
-
-          <!-- <div class="row row-2">
-            <div class="icons icons-2">
-              <img
-                src="./src/assets/icon/location.svg"
-                alt=""
-                width="100%"
-                height="65%"
-              />
-            </div>
-            <section id="phase-2" data-aos-delay="80" data-aos-duration="800">
-              <div class="details">
-                <span class="title">Verification</span> -->
-                <!-- <span>
-                2nd oct 2022
-              </span> -->
-              <!-- </div>
-              <p>
-                Your pre-registration details will be verified and your startup
-                particulars will be authenticated by our team. A stipulated
-                registration fee will be charged after the authentication.
-              </p> -->
-              <!-- <div class="bottom"><a href="#">
-                learn more
-              </a> </div> -->
-            <!-- </section>
-          </div> -->
-
-          <!-- Proof of Concept -->
-
-          <!-- <div class="row row-3">
-            <div class="icons icons-3">
-              <img
-                src="./src/assets/icon/location.svg"
-                alt=""
-                width="100%"
-                height="65%"
-              />
-            </div>
-            <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
-              <div class="details">
-                <span class="title">Proof of concept</span> -->
-                <!-- <span>
-                3rd oct 2022
-              </span> -->
-              <!-- </div>
-              <p>
-                Find out whether your startup has the potential for real-world
-                application and whether it is feasible enough to justify the
-                expenses needed to support and develop it.
-              </p> -->
-              <!-- <div class="bottom"><a href="#">
-                learn more
-              </a> </div> -->
-            <!-- </section>
-          </div> -->
-
-          <!-- Final Pitch -->
-<!-- 
-          <div class="row row-4">
-            <div class="icons icons-5">
-              <img
-                src="./src/assets/svg/finish-flag 1.svg"
-                alt=""
-                width="100%"
-                height="65%"
-              />
-            </div> -->
-            <!-- <section id="phase-5" data-aos-delay="110" data-aos-duration="800">
-              <div class="details">
-                <span class="title">Final Pitch</span> -->
-                <!-- <span>
-                2nd oct 2022
-              </span> -->
-              <!-- </div>
-              <p>
-                Rightly said by Winston Churchill, “The last part, the part you
-                are approaching, it is the courage to continue that counts”.
-                This round is the final round to pitch for funding and to turn
-                your abstract idea and level it up into a worthy venture.
-              </p> -->
-              <!-- <div class="bottom"><a href="#">
-                        learn more
-                      </a> </div> -->
-            <!-- </section>
-          </div>
-        </div>
-      </section>  -->
 
       <section class="Gallery" id="Gallery">
         <h1 class="main-heading">Gallery</h1>
