updated html structure

--- a/src/projectpillar/index.html
+++ b/src/projectpillar/index.html
@@ -83,7 +83,7 @@
 
     <!-- Content Area -->
 
-    <article id="article">
+    <main id="main">
       <!-- Hero Area -->
       <section id="home"  >
         <div class="home-wrapper">
@@ -548,7 +548,7 @@
       </section>
       <script src="../foodfiesta/asset/javascript/gallery.js"></script>
       
-    </article>
+    </main>
 
     <!-- Footer Area -->
 
