--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
         <li><a href="#testimony">Testimony</a></li>
         <li><a href="#contactus">Contact Us </a></li>
         <li><a href="./team/index.html">Our Team</a></li>
-        <li> <a id="nav-a" href="./faq/index.html">FAQ</a> </li>
+        <li><a id="nav-a" href="./faq/index.html">FAQ</a></li>
         <!-- <li><a href="./team/index.html">Our Team</a></li> -->
       </ul>
       <label for="nav-toggle" class="icon-burger">
@@ -345,7 +345,7 @@
         <div class="dots"></div>
       </div>
     </section>
-    <!-- 
+
     <section class="registration" id="registration">
       <h1 class="reg-title" id="reg-title">For Students</h1>
       <div class="blog-card">
@@ -370,7 +370,7 @@
           </a>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- CONTACT FORM SECTION  -->
 
     <section class="contact-info" id="contactus">
