--- a/src/events/index.html
+++ b/src/events/index.html
@@ -67,8 +67,8 @@
           class="collage"
           alt="events_collage"
           style="width: 100%"
-        >
-        <img src="./img/phone_collage.png" class="phoneimg"/>
+        />
+        <img src="./img/phone_collage.png" class="phoneimg" />
       </picture>
 
       <div class="content">
@@ -212,7 +212,7 @@
           </div>
 
           <div class="contact-card">
-            <h4>Bhumika Thanvi</h4>
+            <h4>Bhumika Thanvi (E-CELL Head)</h4>
             <div class="contact-content">
               <div class="email-area">
                 <i class="bi bi-envelope-fill"></i>
