--- a/src/foodfiesta/index.html
+++ b/src/foodfiesta/index.html
@@ -672,7 +672,7 @@
           </div>
 
           <div class="contact-card">
-            <h4>Bhumika Thanvi</h4>
+            <h4>Bhumika Thanvi (E-CELL Head)</h4>
             <div class="contact-content">
               <div class="email-area">
                 <i class="bi bi-envelope-fill"></i>
