--- a/src/team/index.html
+++ b/src/team/index.html
@@ -513,7 +513,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Bhumika Thanvi (Student Council Head)</h4>
+                    <h4>Bhumika Thanvi (E-CELL Head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
