--- a/src/team/index.html
+++ b/src/team/index.html
@@ -248,7 +248,7 @@
         <div class="group">
 
             <div class="container-block container">
-                <p class="text-blk team-head-text">Admins</p>
+                <p class="text-blk team-head-text">ADMINISTRATION</p>
                 <div class="responsive-container-block teamcard-container">
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
