--- a/src/team/index.html
+++ b/src/team/index.html
@@ -82,7 +82,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/BHUMIKA.png" class="team-img" />
+                                <img src="gallery/council/BHUMIKA.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Bhumika Thanvi</p>
@@ -93,7 +93,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/HARSH.png" class="team-img" />
+                                <img src="gallery/council/HARSH.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Harsh Patadia</p>
@@ -110,7 +110,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/ADIT.png" class="team-img" />
+                                <img src="gallery/council/ADIT.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Adit Gandhi</p>
@@ -121,7 +121,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/DHARA.png" class="team-img" />
+                                <img src="gallery/council/DHARA.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Dhara Shah</p>
@@ -146,7 +146,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/PRATHAM(G)-.png" class="team-img" />
+                                <img src="gallery/council/PRATHAM(G)-.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Pratham Gupta</p>
@@ -157,7 +157,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/HUSSAIN.png" class="team-img" />
+                                <img src="gallery/council/HUSSAIN.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Husain Lokhandwala</p>
@@ -174,7 +174,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/SAIGANESH.png" class="team-img" />
+                                <img src="gallery/council/SAIGANESH.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Saiganesh Gurrapu</p>
@@ -185,7 +185,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/NEERAJ.png" class="team-img" />
+                                <img src="gallery/council/NEERAJ.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Neeraj Meka</p>
@@ -207,7 +207,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/YAJNESHNEW.png" class="team-img" />
+                                <img src="gallery/council/YAJNESHNEW.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Yajnesh Kharayat</p>
@@ -218,7 +218,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/PRATHAM(K).png" class="team-img" />
+                                <img src="gallery/council/PRATHAM(K).webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Pratham Kamble</p>
@@ -229,7 +229,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/NIKHIL.png" class="team-img" />
+                                <img src="gallery/council/NIKHIL.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Nikhil Pangaonkar</p>
@@ -253,7 +253,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/GEETANJALI.png" class="team-img" />
+                                <img src="gallery/council/GEETANJALI.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Geetanjali Sahoo</p>
@@ -264,7 +264,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/AMAR.png" class="team-img" />
+                                <img src="gallery/council/AMAR.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Amar Chouhan</p>
@@ -281,7 +281,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/ARYAN YADAV.png" class="team-img" />
+                                <img src="gallery/council/ARYAN YADAV.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Aryan Yadav</p>
@@ -292,7 +292,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/ROHIT.png" class="team-img" />
+                                <img src="gallery/council/ROHIT.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Rohit Kumar Jha</p>
@@ -316,7 +316,7 @@
                 <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                     <div class="team-card">
                         <div class="team-img-wrapper">
-                            <img src="gallery/council/TANEESH-.png" class="team-img" />
+                            <img src="gallery/council/TANEESH-.webp" class="team-img" />
                         </div>
                         <div class="team-card-content">
                             <p class="text-blk name">Taneesh Parmar</p>
@@ -327,7 +327,7 @@
                 <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                     <div class="team-card">
                         <div class="team-img-wrapper">
-                            <img src="gallery/council/ADITYA.png" class="team-img" />
+                            <img src="gallery/council/ADITYA.webp" class="team-img" />
                         </div>
                         <div class="team-card-content">
                             <p class="text-blk name">Aditya Pyati</p>
@@ -355,7 +355,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/ADITI.png" class="team-img" />
+                                <img src="gallery/council/ADITI.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Aditi Kalantre</p>
@@ -366,7 +366,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/AZIZ.png" class="team-img" />
+                                <img src="gallery/council/AZIZ.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Aziz Lokhandwala</p>
@@ -377,7 +377,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
                         <div class="team-card">
                             <div class="team-img-wrapper">
-                                <img src="gallery/council/AK.png" class="team-img" />
+                                <img src="gallery/council/AK.webp" class="team-img" />
                             </div>
                             <div class="team-card-content">
                                 <p class="text-blk name">Atharva Kothawade</p>
