--- a/src/podcast/index.html
+++ b/src/podcast/index.html
@@ -243,14 +243,14 @@
                   allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                 ></iframe>
 
-                <a href="#" class="podcast-card">
-                  <!-- <figure class="card-banner">
-                  <img src="./assets/images/ep2.jpeg" alt="Purpose, Patience, Passion Story: Shridhar Mankar">
+                <!-- <a href="#" class="podcast-card">
+                  <figure class="card-banner">
+                  <img src="./assets/images/ep2.jpeg" alt="Purpose, Patience, Passion Story: Shridhar Mankar"> -->
 
                   <div class="card-banner-icon">
                     <ion-icon name="play"></ion-icon>
                   </div>
-                </figure> -->
+                </figure>
 
                   <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3EsXsSxhW2YzQwak4j1Lh8?utm_source=generator&theme=0" width="800" height="282" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe> -->
 
@@ -265,7 +265,7 @@
                       Purpose, Patience, Passion Story: Shridhar Mankar
                     </h3>
                   </div>
-                </a>
+                <!-- </a>
               </li>
             </ul>
           </section>
@@ -282,7 +282,7 @@
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen
-                ></iframe>
+                ></iframe> -->
 
                 <!-- <a href="#" class="podcast-card">
                     <img src="./assets/images/ep1.jpeg" alt="Ep 1:- Hope, Hustle, Hit Story: Sumer Singh Rajpurohit">
@@ -303,7 +303,7 @@
                   </div>
 
                 </a> -->
-              </li>
+              <!-- </li>
 
               <li>
                 <iframe
@@ -315,7 +315,7 @@
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen
-                ></iframe>
+                ></iframe> -->
 
                 <!-- <a href="#" class="podcast-card">
 
