fixed footer quick links

--- a/src/projectpillar/index.html
+++ b/src/projectpillar/index.html
@@ -562,9 +562,9 @@
           <div class="quick-links-wrapper">
             <div class="footer-heading">Quick Links</div>
             <div class="links-wrapper">
-              <a href="#home" class="quick-link">Home</a>
-              <a href="#about" class="quick-link">About Us</a>
-              <a href="#objective" class="quick-link">Objectives</a>
+              <a href="../index.html#home" class="quick-link">Home</a>
+              <a href="../index.html#about" class="quick-link">About Us</a>
+              <a href="../index.html#objective" class="quick-link">Objectives</a>
               <a href="../events/index.html" class="quick-link">Events</a>
               <a href="../team/index.html" class="quick-link">Our Team</a>
               <a href="../faq/index.html" class="quick-link">FAQ</a>
